--- a/src/djlibrary/templates/_sidenav.html
+++ b/src/djlibrary/templates/_sidenav.html
@@ -89,38 +89,8 @@
       <!-- Navigation -->
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="./index.html">
-            <i class="ni ni-tv-2 text-primary"></i> Dashboard
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./examples/icons.html">
-            <i class="ni ni-planet text-blue"></i> Icons
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./examples/maps.html">
-            <i class="ni ni-pin-3 text-orange"></i> Maps
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./examples/profile.html">
-            <i class="ni ni-single-02 text-yellow"></i> User profile
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./examples/tables.html">
-            <i class="ni ni-bullet-list-67 text-red"></i> Tables
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./examples/login.html">
-            <i class="ni ni-key-25 text-info"></i> Login
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./examples/register.html">
-            <i class="ni ni-circle-08 text-pink"></i> Register
+          <a class="nav-link" href="{% url 'book-list' %}">
+            <i class="ni ni-planet text-blue"></i> Books
           </a>
         </li>
       </ul>
