--- a/src/djlibrary/templates/book/create.html
+++ b/src/djlibrary/templates/book/create.html
@@ -1,4 +1,5 @@
 {% extends "__base.html" %}
+{% load widget_tweaks %}
 
 {% block page_content %}
 <div class="card">
@@ -8,8 +9,31 @@
     <div class="card-body">
         <form method="post">
             {% csrf_token %}
-            {{form.as_p}}
-            <button type="submit" class="btn btn-success">Create</button>
+            <div class="pl-lg-4">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="form-group">
+                            <label class="form-control-label"
+                                for="{{ form.name.id_for_label }}">{{ form.name.label }}</label>
+                                {% render_field form.name|add_class:"form-control form-control-alternative" placeholder="Enter book name here"%}
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="form-group">
+                            <label class="form-control-label"
+                                for="{{ form.isbn_number.id_for_label }}">{{ form.isbn_number.label }}</label>
+                                {% render_field form.isbn_number|add_class:"form-control form-control-alternative" placeholder="Enter book isbn here"%}
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4 offset-4">
+                        <button type="submit" class="btn btn-success btn-block">Create</button>
+                    </div>
+                </div>
+            </div>
         </form>
     </div>
 </div>
