link pages with each other.

--- a/src/djlibrary/templates/book/list.html
+++ b/src/djlibrary/templates/book/list.html
@@ -18,6 +18,7 @@
                         <th scope="col">Id</th>
                         <th scope="col">Name</th>
                         <th scope="col">Isbn</th>
+                        <th scope="col"></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -28,6 +29,17 @@
                         </td>
                         <td>{{book.name}}</td>
                         <td>{{book.isbn_number}}</td>
+                        <td class="text-right">
+                            <div class="dropdown">
+                                <a class="btn btn-sm btn-icon-only text-light" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              <i class="fas fa-ellipsis-v"></i>
+                            </a>
+                                <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
+                                  <a class="dropdown-item" href="{% url 'book-update' book.id %}">Update</a>
+                                  <a class="dropdown-item" href="{% url 'book-delete' book.id %}">Delete</a>
+                                </div>
+                            </div>
+                        </td>
                     </tr>
                     {% endfor %}
                 </tbody>
