--- a/src/djlibrary/templates/book/delete.html
+++ b/src/djlibrary/templates/book/delete.html
@@ -8,6 +8,7 @@
                 <h3 class="mb-0">Delete Book #{{object.id}}</h3>
             </div>
             <div class="col-4 text-right">
+                <a href="{% url 'book-detail' book.id %}" class="btn btn-sm btn-info">View</a>
                 <a href="{% url 'book-list' %}" class="btn btn-sm btn-primary">View All</a>
             </div>
         </div>
