--- a/src/djlibrary/templates/_sidenav.html
+++ b/src/djlibrary/templates/_sidenav.html
@@ -90,7 +90,7 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="{% url 'book-list' %}">
-            <i class="ni ni-planet text-blue"></i> Books
+            <i class="fas fa-list"></i> Books
           </a>
         </li>
       </ul>
