--- a/src/djlibrary/templates/book/update.html
+++ b/src/djlibrary/templates/book/update.html
@@ -6,7 +6,7 @@
     <div class="card-header">
         <div class="row align-items-center">
             <div class="col-8">
-                <h3 class="mb-0">Create a New Book</h3>
+                <h3 class="mb-0">Update Book #{{book.id}}</h3>
             </div>
             <div class="col-4 text-right">
                 <a href="{% url 'book-detail' book.id %}" class="btn btn-sm btn-info">View</a>
