add create view in list view.

--- a/src/djlibrary/templates/book/list.html
+++ b/src/djlibrary/templates/book/list.html
@@ -9,6 +9,9 @@
                     <div class="col-8">
                         <h3 class="mb-0">List of Books</h3>
                     </div>
+                    <div class="col-4 text-right">
+                        <a href="{% url 'book-create' %}" class="btn btn-sm btn-success">Create</a>
+                    </div>
                 </div>
             </div>
             <div class="table-responsive">
