update sidebar: add link to create a new book.

--- a/src/djlibrary/templates/_sidenav.html
+++ b/src/djlibrary/templates/_sidenav.html
@@ -93,6 +93,11 @@
             <i class="fas fa-list"></i> Books
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'book-create' %}">
+            <i class="fas fa-plus"></i> Create a New Book
+          </a>
+        </li>
       </ul>
     </div>
   </div>
